Deployment/customer-service-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  selector:
    matchLabels:
      app: customer-service
      version: v1
  template:
    metadata:
      labels:
        app: customer-service
        version: v1
    spec:
      containers:
      - name: customer-service
        image: quay.io/necloudnativetraining/customer-service:master
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
