Deployment/customer-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
  - port: 8080
    targetPort: 8080
