Deployment/appdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: "springboot-workshop-feb-2021"
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer-service-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: "springboot-workshop-feb-2021"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer-service-node
  strategy: {}
  template:
    metadata:
      labels:
        app: customer-service-node
    spec:
      containers:
        - image: quay.io/necloudnativetraining/customer-service:%%IMG_TAG%%
          name: customer-service-node
          resources: {}
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: quay-cred
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: customer-service
  namespace: "springboot-workshop-feb-2021"
spec:
  to:
    kind: Service
    name: customer-service
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
