Deployment/customer-service-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: customer-service
spec:
  to:
    kind: Service
    name: customer-service
